// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph> default paragraph 1`] = `
<div
  className="tribe-editor__paragraph tribe-editor__paragraph--medium"
>
  Modern Tribe
</div>
`;

exports[`<Paragraph> smaller paragraph 1`] = `
<div
  className="tribe-editor__paragraph tribe-editor__paragraph--small"
>
  Modern Tribe
</div>
`;
